RH-2008-09-26-0: Enhancem.:  o Hedeby: test for issue 571 added
                             o Hedeby: new method set_execd_install_params
                 Review:     MB 

RD-2008-09-29-0: Bugfix:     fixed test for issue 1422
                 Review:     CR

AP-2008-09-29-0: Bugfix:     o qrsh test environment related fix
                             o path_alias test - fix of AP-2008-09-19-0
                 Review:     TB

MG-2008-09-29-1: Enhancem.:  Hedeby tests for MaxpendingJob slo
                 Review:     MB

EB-2008-09-29-0: Enhancem.:  added tests for "Enforced Job Deletion" (Relaxed Accounting)
                 Review:     MD

MG-2008-09-29-0: Enhancem.:  test for hedeby issue 537
                 Review:     AF

GH-2008-09-26-0: Enhancem.:  added test for issue 2564
                 Review:     AP

CR-2008-09-25-0: Bugfix:     o Fixed qmod/reschedule test
                 Enhancem.:  o Added new test for issue 2735
                             o New procedures in sge_procedures.tcl:
                                  ge_has_feature()
                                  - get feature info for tested release
                                  get_shepherd_pid_list()
                                  - list of all running sge_shepherds pids
                             o new parameter for wait_for_end_of_all_jobs():
                                  {raise_error 1} 
                                     - optional: report errors
                             o new parameter for delete_all_jobs():
                                  {do_force 0}
                                     - optional: do a forced qdel
                               (added ADOC header)
                 Review:     DG

RD-2008-09-25-0: Enhancem.:  added test for issue 2736
                 Review:     DG

AP-2008-09-25-0: Bugfix:     get_ps_info - fixed PGID for hp archs.
                 Review:     JG

TB-2008-09-24-0: Enhancem.:  o Hedeby executor reload test with missing