@@ -1,3 +1,14 @@
+CR-2008-09-30-0: Enhancem.:  o New testsuite test:
+                               testsuite/host_test
+                             o new ge_has_feature() feature:
+                               "scheduler-thread"
+                 Cleanup:    o enhanced timeout parameter in
+                               system_tests/execd/startup test
+                 Bugfix:     o is_remote_file()
+                               If no path ("") was specified the procedure
+                               returned success
+                 Review:     RD
+
 RH-2008-09-26-0: Enhancem.:  o Hedeby: test for issue 571 added
                              o Hedeby: new method set_execd_install_params
                  Review:     MB 
